scispacy_analysis/.ipynb_checkpoints/spacy_output-checkpoint.txt
nohup: ignoring input
  File "scispacy_doc_maker.py", line 104
    def get_names(ent)
                     ^
SyntaxError: invalid syntax
